[Mac] Make deviceorientationabsolute implementation conform with the specification.

Absolute device orientation cannot be provided on Mac machines.
This patch makes sure that this is handled according to spec, i.e.
by propagating a one-off all-null event to let the web page know
no data can be provided for this event type.

spec:
http://w3c.github.io/deviceorientation/spec-source-orientation.html

TEST=http://timvolodine.github.io/deviceorientation-test/
BUG=609094

Review-Url: https://codereview.chromium.org/1915273003
Cr-Commit-Position: refs/heads/master@{#394569}

Former-commit-id: 7bf8fdb21b7aec50889a725ceea2ebf72d484994